--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref
-certifi
+certifi==2021.10.8
+dj-database-url==0.5.0
 Django
-gunicorn
-whitenoise
+django-heroku==0.3.1
+gunicorn==20.1.0
+psycopg2
+pytz==2021.3
+sqlparse
+typing-extensions
+whitenoise==5.3.0
+wincertstore==0.2
